--- a/login.html
+++ b/login.html
@@ -1,40 +1,30 @@
 <!doctype html>
 <html lang="pt-br">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Fintech</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/main.css">
 </head>
-
 <body>
-
     <main class="w-100 m-auto">
         <img class="mb-4" src="./assets/images/logo.svg" alt="logo Fintech" width="102" height="57">
         <form>
-
-            <h1 class="h3 mb-4 fw-normal text-center">Acesse sua conta</h1>
-
+            <h1 class="h2 mb-4 fw-normal text-center">Acesse sua conta</h1>
             <div class="form-floating">
-                <label for="floatingInput">Seu email</label>
                 <input type="email" class="form-control mb-3" id="floatingInput" placeholder="name@example.com" required>
+                <label for="floatingInput">Seu email</label>
             </div>
             <div class="form-floating">
-                <label for="floatingPassword">Sua senha</label>
                 <input type="password" class="form-control" id="floatingPassword" placeholder="Senha" required>
+                <label for="floatingPassword">Sua senha</label>
                 <a class="text-muted float-start" href="./passwordrecovery.html">Esqueci minha senha</a>
             </div>
-
-            <button class="w-100 btn btn-lg btn-green mt-3" type="submit">Entrar</button>
-            <p class="mt-4 mb-3 text-muted text-center">Ainda não possui conta? <a class="text-green"
-                    href="./createaccount.html">Faça seu cadastro!</a></p>
+            <button class="w-100 btn btn-lg btn-success mt-3" type="submit">Entrar</button>
+            <p class="mt-4 mb-3 text-muted text-center">Ainda não possui conta?<a class="text-success" href="./createaccount.html">Faça seu cadastro!</a></p>
         </form>
     </main>
-
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
-
 </html>
